--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                 애당 (愛當)
                 <p class="text-sm mt-1 opacity-90">사랑으로 가득 찬 당신의 이야기</p>
             </a>
-            <a href="wandang.html" class="block bg-green-500 hover:bg-green-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
-                완당 (完當)
+            <a href="https://JUNGDONGSU.github.io/PRUGIO/Lee_carrot 4.html" class="block bg-green-500 hover:bg-green-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
+                최당 (完當)
                 <p class="text-sm mt-1 opacity-90">완벽한 당신의 성공 스토리</p>
             </a>
             <!-- 정당 링크를 실제 웹 주소 (GitHub Pages 등)로 변경합니다. -->
@@ -42,3 +42,4 @@
     </div>
 </body>
 </html>
+
