--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                 애당 (愛當)
                 <p class="text-sm mt-1 opacity-90">사랑으로 가득 찬 당신의 이야기</p>
             </a>
-            <a href="https://JUNGDONGSU.github.io/PRUGIO/Lee_carrot 4.html" class="block bg-green-500 hover:bg-green-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
+            <a href="https://JUNGDONGSU.github.io/PRUGIO/carrot 4.html" class="block bg-green-500 hover:bg-green-600 text-white font-semibold py-4 px-6 rounded-xl shadow-md transition duration-300 transform hover:scale-105">
                 최당 (完當)
                 <p class="text-sm mt-1 opacity-90">완벽한 당신의 성공 스토리</p>
             </a>
@@ -42,4 +42,5 @@
     </div>
 </body>
 </html>
+
 
