--- a/Gold-_Rich.html
+++ b/Gold-_Rich.html
@@ -160,7 +160,7 @@
                     <h4 class="text-md font-bold text-gray-700 mb-2">🗓️ 입주 및 계약 조건</h4>
                     <ul class="list-disc list-inside text-gray-700 text-sm mb-4 feature-list-spacing">
                         <li><strong>28년 1월 입주예정:</strong> 지금 열심히 공사중에 있습니다 (현장탐방 원하시는분 연락주시면,함께 탐방안내 해드립니다!) ☎1811-0526</li>
-                        <li><strong>계약금 5% (입주까지 부담 없음):</strong> 500만원으로 계약 발행, 5% 잔금(1,500~1,600)은 입주까지 무이자로 신용대출도 가능!</li>
+                        <li><strong>계약금 5% (입주까지 부담 없음):</strong> 500만원으로 계약서 발행가능! (발코니확장비 지원 해드립니다!!)</li>
                         <li><strong>현금 캐시백 제도:</strong> 계약금 5%를 전액 현금으로 납부하시는 분은 현금 캐시백 제도가 크니, 문의주세요!</li>
                     </ul>
                 </div>
@@ -255,3 +255,4 @@ END:VCARD`;
     </script>
 </body>
 </html>
+
