--- a/Gold-_Rich.html
+++ b/Gold-_Rich.html
@@ -160,7 +160,7 @@
                         <span class="text-2xl mr-2 text-red-500">★</span> 모델하우스 방문 이벤트
                     </h4>
                     <ul class="list-none space-y-1 text-gray-700 text-sm">
-                        <li><span class="font-medium text-yellow-700">기간:</span> 2025년 11월 25일(화) ~ 11월 30일(일)</li>
+                        <li><span class="font-medium text-yellow-700">기간:</span> 2025년 12월 15일 ~ 2026년 1월 5일</li>
                         <li><span class="font-medium text-yellow-700">대상:</span> 예약 후 방문 상담 완료 고객</li>
                         <li><span class="font-medium text-yellow-700">혜택:</span> 신세계상품권 (선착순 50명)</li>
                         <li class="text-xs text-red-600 mt-2">※ 증정품 소진 시 이벤트가 조기 종료될 수 있습니다</li>
@@ -172,7 +172,7 @@
                     <h4 class="text-lg font-bold text-blue-800 mb-2">■ 분양 안내</h4>
                     <ul class="list-none space-y-1 text-gray-700 text-sm">
                         <li><span class="font-medium text-blue-700">위치:</span> 경기도 김포시 풍무동 483-7</li>
-                        <li><span class="font-medium text-blue-700">규모:</span> 지하 3층 ~ 지상 29층, 총 1,769세대(1,2,3단지동시분양)</li>
+                        <li><span class="font-medium text-blue-700">규모:</span> 지하 3층 ~ 지상 29층, 18개동, 총 1,769세대(1,2,3단지동시분양)</li>
                         <li><span class="font-medium text-blue-700">타입:</span> 전용 59·74·84㎡</li>
                         <li><span class="font-medium text-blue-700">입주 예정:</span> 2028년 8월</li>
                     </ul>
@@ -260,3 +260,4 @@ END:VCARD`;
     </script>
 </body>
 </html>
+
